@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Rectangle {
        - height : int
        - width : int
        + getHeight()
        + getWidth()
        + setHeight()
        + setWidth()
    }
  }
  

  namespace  {
    class Shape {
    }
  }
  

  namespace  {
    class Square {
        - side : int
        + getSide()
        + setSide()
    }
  }
  

  namespace  {
    class Sum {
        {static} + sumOfAreas()
    }
  }
  

  Rectangle -up-|> Shape
  Square -up-|> Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
